Finish security take 2, GitHub workflow features...
- Use link that always goes to ALKiln default branch
- Link to better workflow job log instructions
- Funk GitHub workflow features
- Security

--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -102,7 +102,7 @@ For security, [ALKiln freezes the versions of its third-party libraries](#alkiln
 
 - [ALKiln's repository](https://github.com/SuffolkLITLab/ALKiln) contains our core code
 - [GitHub setup interview](https://github.com/SuffolkLITLab/docassemble-ALKilnSetup) helps you install GitHub tests on your repository
-- [ALKilnInThePlayground](https://github.com/SuffolkLITLab/docassemble-ALKilnInThePlayground) lets you run tests from your docassemble server
+- [ALKilnInThePlayground](https://github.com/SuffolkLITLab/docassemble-ALKilnInThePlayground) lets you run tests from your docassemble server <!-- '...lets you run <AutoDIY/> tests from... ' -->
 - [The Story Table test generator](https://github.com/plocket/alkiln_story) uses an interview's JSON variables to create a file containing a Story Table test
 
 :::warning TODO: add links
