--- a/docs/alkiln/troubleshooting.mdx
+++ b/docs/alkiln/troubleshooting.mdx
@@ -55,7 +55,7 @@ Example syntax typo errors:
 
 ## Everything works fine when I run the test manually {#manual-works}
 
-Or "It works when I run the interview manually" or "The tests pass when I run them with ALKilnInThePlayground".
+Or "It works when I run the interview manually" or "The tests pass when I run them with <AutoDIY/> tests".
 
 
 ### Undefined step {#step-undefined}
